force-app/main/default/objects/CECModules__x/CECModules__x.object-meta.xml
<CustomObject>
    <description>CECModules</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>CECModules</externalName>
    <label>CECModules</label>
    <pluralLabel>CECModules</pluralLabel>
</CustomObject>