force-app/main/default/objects/CECModules__x/fields/AgreedToTermsConditions__c.field-meta.xml
<CustomField>
    <fullName>AgreedToTermsConditions__c</fullName>
    <description>AgreedToTermsConditions</description>
    <externalDeveloperName>AgreedToTermsConditions</externalDeveloperName>
    <label>AgreedToTermsConditions</label>
    <length>128</length>
    <type>Text</type>
</CustomField>