force-app/main/default/objects/CECModules__x/fields/ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>ApplicationName__c</fullName>
    <description>ApplicationName</description>
    <externalDeveloperName>ApplicationName</externalDeveloperName>
    <label>ApplicationName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>