force-app/main/default/objects/CECModules__x/fields/CECApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>CECApprovedDate__c</fullName>
    <description>CECApprovedDate</description>
    <externalDeveloperName>CECApprovedDate</externalDeveloperName>
    <label>CECApprovedDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>