force-app/main/default/objects/CECModules__x/fields/CertifyingBody__c.field-meta.xml
<CustomField>
    <fullName>CertifyingBody__c</fullName>
    <description>CertifyingBody</description>
    <externalDeveloperName>CertifyingBody</externalDeveloperName>
    <label>CertifyingBody</label>
    <length>128</length>
    <type>Text</type>
</CustomField>