force-app/main/default/objects/CECModules__x/fields/ContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ContactFirstName__c</fullName>
    <description>ContactFirstName</description>
    <externalDeveloperName>ContactFirstName</externalDeveloperName>
    <label>ContactFirstName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>