force-app/main/default/objects/CECModules__x/fields/ContactLastName__c.field-meta.xml
<CustomField>
    <fullName>ContactLastName__c</fullName>
    <description>ContactLastName</description>
    <externalDeveloperName>ContactLastName</externalDeveloperName>
    <label>ContactLastName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>