force-app/main/default/objects/CECModules__x/fields/FireTested__c.field-meta.xml
<CustomField>
    <fullName>FireTested__c</fullName>
    <description>FireTested</description>
    <externalDeveloperName>FireTested</externalDeveloperName>
    <label>FireTested</label>
    <length>128</length>
    <type>Text</type>
</CustomField>