force-app/main/default/objects/CECModules__x/fields/IndependentQualityMeasures__c.field-meta.xml
<CustomField>
    <fullName>IndependentQualityMeasures__c</fullName>
    <description>IndependentQualityMeasures</description>
    <externalDeveloperName>IndependentQualityMeasures</externalDeveloperName>
    <label>IndependentQualityMeasures</label>
    <length>128</length>
    <type>Text</type>
</CustomField>