force-app/main/default/objects/CECModules__x/fields/LicenseeCertificateHolderName__c.field-meta.xml
<CustomField>
    <fullName>LicenseeCertificateHolderName__c</fullName>
    <description>LicenseeCertificateHolderName</description>
    <externalDeveloperName>LicenseeCertificateHolderName</externalDeveloperName>
    <label>LicenseeCertificateHolderName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>