force-app/main/default/objects/CECModules__x/fields/ModelNumber__c.field-meta.xml
<CustomField>
    <fullName>ModelNumber__c</fullName>
    <description>ModelNumber</description>
    <externalDeveloperName>ModelNumber</externalDeveloperName>
    <label>ModelNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>