force-app/main/default/objects/CECModules__x/fields/ModuleNumber__c.field-meta.xml
<CustomField>
    <fullName>ModuleNumber__c</fullName>
    <description>ModuleNumber</description>
    <externalDeveloperName>ModuleNumber</externalDeveloperName>
    <label>ModuleNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>