force-app/main/default/objects/CECModules__x/fields/OutputAtSTC__c.field-meta.xml
<CustomField>
    <fullName>OutputAtSTC__c</fullName>
    <description>OutputAtSTC</description>
    <externalDeveloperName>OutputAtSTC</externalDeveloperName>
    <label>OutputAtSTC</label>
    <length>128</length>
    <type>Text</type>
</CustomField>