force-app/main/default/objects/CECModules__x/fields/SalesforceModuleCertID__c.field-meta.xml
<CustomField>
    <fullName>SalesforceModuleCertID__c</fullName>
    <description>SalesforceModuleCertID</description>
    <externalDeveloperName>SalesforceModuleCertID</externalDeveloperName>
    <label>SalesforceModuleCertID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>